# yql

./: Cargo.toml  README.md
.github/workflows/: ci.yml  code-coverage.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/server/: Cargo.toml
apps/server/src/: main.rs  rpc_yql_service.rs
libs/array/: Cargo.toml
libs/array/src/: array.rs  array_ext.rs  builder.rs  data_type.rs  lib.rs  null_array.rs  primitive_array.rs  scalar.rs  string_array.rs
libs/array/src/compute/: filter.rs
libs/core/: Cargo.toml
libs/core/src/: lib.rs  sink_provider.rs  source_provider.rs
libs/core/src/array/: bitmap.rs  mod.rs  primitive_array.rs  scalar.rs  string_array.rs
libs/core/src/array/compute/: mod.rs
libs/core/src/dataframe/: dsl.rs  mod.rs
libs/core/src/dataset/: csv_reader.rs  dataset.rs  mod.rs
libs/core/src/execution/: execution_context.rs  mod.rs  storage.rs  stream.rs
libs/core/src/execution/dataset/: group_by.rs  mod.rs
libs/core/src/execution/streams/: aggregate.rs  filter.rs  mod.rs  projection.rs  repartition.rs  source.rs
libs/core/src/expr/: binary_operator.rs  cast.rs  display.rs  expr.rs  func.rs  literal.rs  mod.rs  physical_expr.rs  signature.rs  to_physical.rs  unary_operator.rs
libs/core/src/expr/funcs/: aggregate.rs  f_logic.rs  f_ref.rs  f_stat.rs  math.rs  mod.rs  nulls.rs  string.rs  time.rs  utils.rs
libs/core/src/planner/: mod.rs  window.rs
libs/core/src/planner/logical_plan/: aggregate.rs  filter.rs  mod.rs  projection.rs  repartition.rs  source.rs
libs/core/src/planner/physical_plan/: aggregate.rs  filter.rs  mod.rs  projection.rs  repartition.rs  source.rs  to_physical.rs
libs/core/src/sinks/: console.rs  mod.rs
libs/core/src/sources/: csv.rs  kafka.rs  mod.rs  test_harness.rs
libs/core/src/sql/: ast.rs  context.rs  mod.rs  parser.rs  planner.rs
libs/dataset/: Cargo.toml
libs/dataset/src/: csv_reader.rs  dataset.rs  display.rs  lib.rs  schema.rs
libs/dataset/src/array/: array.rs  array_ext.rs  data_type.rs  null_array.rs  primitive_array.rs  string_array.rs
libs/dataset/src/array/compute/: filter.rs
libs/dataset/src/dataset/: csv_reader.rs  dataset.rs  display.rs  format.rs  mod.rs  schema.rs  serde.rs
libs/dataset/src/dataset/format/: json.rs  mod.rs
libs/expr/: Cargo.toml
libs/expr/src/: binary_operator.rs  cast.rs  display.rs  expr.rs  func.rs  lib.rs  literal.rs  physical_expr.rs  signature.rs  to_physical.rs  unary_operator.rs
libs/expr/src/funcs/: aggregate.rs  math.rs  mod.rs
libs/planner/: Cargo.toml
libs/planner/src/: lib.rs  sink_provider.rs  source_provider.rs  window.rs
libs/planner/src/logical_plan/: aggregate.rs  filter.rs  projection.rs  source.rs
libs/planner/src/physical_plan/: aggregate.rs  filter.rs  mod.rs  projection.rs  source.rs  to_physical.rs
libs/protocol/: Cargo.toml  build.rs
libs/protocol/proto/: yql.proto
libs/protocol/src/: lib.rs  yql.rs
libs/service/: Cargo.toml
libs/service/src/: lib.rs  registry.rs  service.rs  sink_provider.rs  source_provider.rs  sql.rs  storage.rs  task.rs
libs/sink-console/: Cargo.toml
libs/sink-console/src/: lib.rs
libs/source-csv/: Cargo.toml
libs/source-csv/src/: lib.rs
libs/sql/: Cargo.toml
libs/sql/src/: ast.rs  context.rs  lib.rs  parser.rs
libs/stream/: Cargo.toml
libs/stream/src/: checkpoint.rs  config.rs  lib.rs  stream.rs
libs/stream/src/dataset/: group_by.rs  mod.rs
libs/stream/src/streams/: aggregate.rs  filter.rs  mod.rs  projection.rs  source.rs
libs/stream/tests/: test.csv
src/: main.rs  sql.rs  storage.rs
