[package]
name = "yql-server"
version = "0.1.0"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2018"

[dependencies]
yql-core = { path = "libs/core" }

tokio = { version = "1.6.0", features = ["rt-multi-thread", "macros"] }
warp = "0.3.1"
rocksdb = "0.16.0"
bincode = "1.3.3"
serde = { version = "1.0.126", features = ["derive"] }
parking_lot = "0.11.1"
anyhow = "1.0.40"

[workspace]
members = [
    "libs/core",
#    "libs/sql",
]