[package]
name = "yql-cli"
version = "0.1.0"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2018"

[dependencies]
yql-dataset = { path = "../../libs/dataset" }

reqwest = { version = "0.11.3", default-features = false, features = ["rustls-tls", "gzip", "json", "brotli"] }
rustyline = "8.2.0"
structopt = "0.3.21"
tokio = { version = "1.6.0", features = ["sync", "rt-multi-thread", "macros"] }
anyhow = "1.0.40"
serde_json = "1.0.64"
futures-util = "0.3.15"
