[package]
name = "yql-server"
version = "0.1.0"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2018"

[dependencies]
yql-service = { path = "../../libs/service" }

serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.21"
tokio = { version = "1.6.0", features = ["sync", "rt-multi-thread", "macros"] }
warp = "0.3.1"
anyhow = "1.0.40"
async-stream = "0.3.2"
