[package]
name = "yql-server"
version = "0.1.0"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2018"

[dependencies]
yql-service = { path = "../../libs/service" }
yql-core = { path = "../../libs/core" }

serde = { version = "1.0.126", features = ["derive"] }
structopt = "0.3.21"
tokio = { version = "1.6.0", features = ["sync", "rt-multi-thread", "macros"] }
warp = "0.3.1"
anyhow = "1.0.40"
async-stream = "0.3.2"
bincode = "1.3.3"
bytes = "1.0.1"
hyper = "0.14.8"
futures-util = "0.3.15"
