[package]
name = "yql-server"
version = "0.1.0"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2018"

[dependencies]
yql-service = { path = "../../libs/service" }
yql-core = { path = "../../libs/core" }
yql-protocol = { path = "../../libs/protocol" }

serde = { version = "1.0.126", features = ["derive"] }
structopt = "0.3.21"
tokio = { version = "1.6.0", features = ["sync", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.6"
tonic = "0.4.3"
anyhow = "1.0.40"
bincode = "1.3.3"
futures-util = "0.3.15"
async-trait = "0.1.50"

