[package]
name = "yql-core"
version = "0.1.0"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2018"

[dependencies]
yql-dataset = { path = "../dataset" }

derive_more = "0.99.13"
chrono = "0.4.19"
serde = { version = "1.0.125", features = ["derive", "rc"] }
chrono-tz = { version = "0.5.3", features = ["serde"] }
anyhow = "1.0.40"
once_cell = "1.7.2"
dyn-clone = "1.0.4"
bincode = "1.3.3"
futures-util = "0.3.15"
tokio = { version = "1.6.0", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = { version = "0.1.6", features = ["sync"] }
async-stream = "0.3.2"
tracing = "0.1.26"
itertools = "0.10.0"
ahash = "0.7.2"
smallvec = { version = "1.6.1", features = ["serde"] }
ordered-float = { version = "2.1.1", features = ["serde"] }
parking_lot = "0.11.1"
async-trait = "0.1.50"
nom = "6.1.2"
rdkafka = "0.26.0"
