[package]
name = "yql-dataset"
version = "0.1.0"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2018"

[dependencies]
bytes = "1.0.1"
chrono = "0.4.19"
serde = { version = "1.0.125", features = ["derive", "rc"] }
chrono-tz = { version = "0.5.3", features = ["serde"] }
comfy-table = "2.1.0"
anyhow = "1.0.40"
once_cell = "1.7.2"
csv = "1.1.6"
regex = "1.4.6"
derive_more = "0.99.13"
