[package]
name = "yql-expr"
version = "0.1.0"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2018"

[dependencies]
yql-array = { path = "../array" }
yql-dataset = { path = "../dataset" }

derive_more = "0.99.13"
anyhow = "1.0.40"
dyn-clone = "1.0.4"
serde = { version = "1.0.125", features = ["derive"] }
bincode = "1.3.3"
chrono = "0.4.19"
