[package]
name = "yql-planner"
version = "0.1.0"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2018"

[dependencies]
yql-array = { path = "../array" }
yql-expr = { path = "../expr" }
yql-dataset = { path = "../dataset" }

tokio-stream = "0.1.6"
anyhow = "1.0.40"
bincode = "1.3.3"
async-stream = "0.3.1"
tokio = { version = "1.6.0", features = ["macros", "time"] }
chrono-tz = "0.5.3"
serde = { version = "1.0.126", features = ["derive"] }
chrono = "0.4.19"
itertools = "0.10.0"
futures-util = "0.3.15"
