[package]
name = "yql-service"
version = "0.1.0"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2018"

[dependencies]
yql-core = { path = "../core" }

rocksdb = "0.16.0"
bincode = "1.3.3"
serde = { version = "1.0.126", features = ["derive"] }
anyhow = "1.0.40"
nom = "6.1.2"
chrono-tz = { version = "0.5.3", features = ["serde"] }
once_cell = "1.7.2"
tokio = { version = "1.6.0", features = ["sync"] }
futures-util = "0.3.15"
url = "2.2.2"
serde_qs = "0.8.3"
async-trait = "0.1.50"
itertools = "0.10.0"
derive_more = "0.99.13"
async-stream = "0.3.2"
