[package]
name = "yql-stream"
version = "0.1.0"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2018"

[dependencies]
yql-planner = { path = "../planner" }
yql-dataset = { path = "../dataset" }
yql-array = { path = "../array" }
yql-expr = { path = "../expr" }

anyhow = "1.0.40"
futures-util = "0.3.15"
parking_lot = "0.11.1"
tokio = { version = "1.6.0", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = { version = "0.1.6", features = ["sync"] }
tracing = "0.1.26"
bincode = "1.3.3"
async-stream = "0.3.1"
itertools = "0.10.0"
ahash = "0.7.2"
smallvec = { version = "1.6.1", features = ["serde"] }
ordered-float = { version = "2.1.1", features = ["serde"] }
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = { version = "0.5.3", features = ["serde"] }
serde = { version = "1.0.126", features = ["derive"] }

[dev-dependencies]
yql-source-csv = { path = "../source-csv" }
